# udemy-course-finder

./: README.md  clean_topic_data.py  extract_topic_data.py  file_utils.py  logging_config.py  pyproject.toml  scrape_topic_html.py  settings.py  udemy_html_extract.py
static_files/: udemy_python_courses_page_1.html
